cd to right directory

--- a/rails/Dockerfile
+++ b/rails/Dockerfile
@@ -4,7 +4,7 @@ RUN  apk update \
   && apk add make gcc libc-dev git ruby libffi-dev yaml-dev openssl-dev zlib-dev readline-dev \
   && mkdir -p /usr/src/app \
   && git clone https://github.com/postmodern/ruby-install /usr/src/ruby-install \
-  && cd ruby-install \
+  && cd /usr/src/ruby-install \
   && make install \
   && ruby-install --system ruby 2.2.0-rc1 -- --disable-install-rdoc \
   && gem install bundler puma --no-ri --no-rdoc \
