Use my base for ~300MB savings

--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -1,13 +1,14 @@
-FROM ubuntu:14.04
+FROM voxxit/base:alpine
 
-RUN  apt-get update \
-  && apt-get install -y swig python-pip python-dev libssl-dev liblzma-dev libevent1-dev git-core \
-  && rm -rf /var/lib/apt/lists/* \
+RUN  apk update \
+  && apk add file build-base swig python python-dev py-pip openssl-dev xz-dev libevent-dev git \
   && git clone --depth=1 https://github.com/docker/docker-registry.git /docker-registry \
   && cp /docker-registry/config/boto.cfg /etc/boto.cfg \
   && pip install /docker-registry/depends/docker-registry-core \
-#  && pip install /docker-registry#egg=docker-registry[bugsnag,newrelic,cors] \
-  && patch $(python -c 'import boto; import os; print os.path.dirname(boto.__file__)')/connection.py < /docker-registry/contrib/boto_header_patch.diff
+  && pip install file:///docker-registry#egg=docker-registry[bugsnag,newrelic,cors] \
+  && patch /usr/lib/python2.7/site-packages/boto/connection.py < /docker-registry/contrib/boto_header_patch.diff \
+  && apk del file build-base python-dev git \
+  && rm -rf /var/cache/apk/*
 
 ENV DOCKER_REGISTRY_CONFIG /config.yml
 ENV SETTINGS_FLAVOR production
