Adding custom mods

--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -1,7 +1,7 @@
 FROM voxxit/base:alpine
 
 RUN  apk update \
-  && apk add file build-base swig python python-dev py-pip openssl-dev xz-dev libevent-dev git \
+  && apk add file build-base swig python python-dev py-boto py-openssl py-pip openssl-dev xz-dev libevent-dev git \
   && git clone --depth=1 https://github.com/docker/docker-registry.git /docker-registry \
   && cp /docker-registry/config/boto.cfg /etc/boto.cfg \
   && pip install /docker-registry/depends/docker-registry-core \
