--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:14.04
 
 RUN  apt-get update \
-  && apt-get install -y swig python-pip python-dev liblzma-dev libevent1-dev git-core \
+  && apt-get install -y swig python-pip python-dev libssl-dev liblzma-dev libevent1-dev git-core \
   && rm -rf /var/lib/apt/lists/* \
   && git clone --depth=1 https://github.com/docker/docker-registry.git /docker-registry \
   && cp /docker-registry/config/boto.cfg /etc/boto.cfg \
