--- a/bind/Dockerfile
+++ b/bind/Dockerfile
@@ -2,9 +2,11 @@ FROM voxxit/base:alpine
 
 RUN  apk update \
   && apk add bind \
-  && rm -rf /var/cache/apk/*
+  && rm -rf /var/cache/apk/* /etc/bind
 
 VOLUME [ "/etc/bind" ]
+
+ADD etc/ /etc/bind/
 
 EXPOSE 53
 
