Figuring it out

--- a/bind/etc/named.conf
+++ b/bind/etc/named.conf
@@ -1,8 +1,6 @@
-// This is the primary configuration file for the BIND DNS server named.
-//
-// If you are just adding zones, please do that in /etc/bind/named.conf.local
+// This is the primary configuration file for the BIND DNS server.
+// To add zones, use /etc/bind/named.conf.local
 
-include "/etc/bind/named.conf.acls";
 include "/etc/bind/named.conf.options";
 include "/etc/bind/named.conf.local";
 include "/etc/bind/named.conf.required-zones";
