--- a/mail/mta/etc/dovecot/conf.d/10-master.conf
+++ b/mail/mta/etc/dovecot/conf.d/10-master.conf
@@ -1,3 +1,16 @@
+# Default VSZ (virtual memory size) limit for service processes. This is mainly
+# intended to catch and kill processes that leak memory before they eat up
+# everything.
+default_vsz_limit = 256M
+
+# Login user is internally used by login processes. This is the most untrusted
+# user in Dovecot system. It shouldn't have access to anything at all.
+default_login_user = dovenull
+
+# Internal user is used by unprivileged processes. It should be separate from
+# login user, so that login processes can't disturb other processes.
+default_internal_user = dovecot
+
 protocols = imap lmtp
 
 service imap-login {
@@ -6,27 +19,17 @@ service imap-login {
   }
 }
 
-service pop3-login {
-  inet_listener pop3 {
-    port = 0
-  }
+service imap {
+  vsz_limit = $default_vsz_limit
+  process_limit = 1024
 }
 
 service lmtp {
   unix_listener /var/spool/postfix/private/dovecot-lmtp {
     mode = 0666
-    group = postfix
-    user = postfix
   }
-}
 
-protocol imap {
-  mail_plugins = $mail_plugins quota imap_quota
-}
-
-protocol lmtp {
-  postmaster_address = postmaster@srv.im
-  mail_plugins = $mail_plugins quota
+  mail_plugins = quota
 }
 
 service auth {
@@ -35,20 +38,19 @@ service auth {
   # permissions make it readable only by root, but you may need to relax these
   # permissions. Users that have access to this socket are able to get a list
   # of all usernames and get results of everyone's userdb lookups.
+  unix_listener auth-userdb {
+    mode = 0666
+  }
+
+  # Postfix smtp-auth
   unix_listener /var/spool/postfix/private/auth {
     mode = 0666
-    user = postfix
-    group = postfix
   }
 
-  unix_listener auth-userdb {
-    mode = 0600
-    user = vmail
-  }
-
-  user = dovecot
+  # Auth process is run as this user.
+  user = $default_internal_user
 }
 
 service auth-worker {
-  user = vmail
+  user = $default_internal_user
 }
