--- a/mail/mta/etc/dovecot/conf.d/10-master.conf
+++ b/mail/mta/etc/dovecot/conf.d/10-master.conf
@@ -26,10 +26,18 @@ service imap {
 
 service lmtp {
   unix_listener /var/spool/postfix/private/dovecot-lmtp {
-    mode = 0666
+    user  = postfix
+    group = postfix
+    mode  = 0600
   }
+}
 
-  mail_plugins = quota
+protocol imap {
+  mail_plugins = $mail_plugins quota imap_quota
+}
+
+protocol lmtp {
+  mail_plugins = $mail_plugins quota
 }
 
 service auth {
