--- a/mail/mta/etc/dovecot/conf.d/10-mail.conf
+++ b/mail/mta/etc/dovecot/conf.d/10-mail.conf
@@ -198,7 +198,7 @@ mail_nfs_storage = yes
 
 # Space separated list of plugins to load for all services. Plugins specific to
 # IMAP, LDA, etc. are added to this list in their own .conf files.
-mail_plugins = $mail_plugins quota sieve
+#mail_plugins = $mail_plugins quota sieve
 
 ##
 ## Mailbox handling optimizations
