disable no plain

--- a/mail/mta/etc/dovecot/conf.d/10-auth.conf
+++ b/mail/mta/etc/dovecot/conf.d/10-auth.conf
@@ -1,4 +1,4 @@
-auth_mechanisms = plain login digest-md5 cram-md5
-disable_plaintext_auth = yes
+auth_mechanisms = plain login
+disable_plaintext_auth = no
 
 !include auth-sql.conf.ext
