change default crypt

--- a/mail/mta/etc/dovecot/conf.d/10-auth.conf
+++ b/mail/mta/etc/dovecot/conf.d/10-auth.conf
@@ -1,4 +1,4 @@
-auth_mechanisms = plain login
-disable_plaintext_auth = no
+auth_mechanisms = plain login cram-md5 digest-md5
+disable_plaintext_auth = yes
 
 !include auth-sql.conf.ext
