allow plaintext auth (since ssl is required)

--- a/mail/mta/etc/dovecot/conf.d/10-auth.conf
+++ b/mail/mta/etc/dovecot/conf.d/10-auth.conf
@@ -1,4 +1,7 @@
-auth_mechanisms = plain login cram-md5 digest-md5
-disable_plaintext_auth = yes
+# since we're using SSL [see: 10-ssl.conf], we can safely allow
+# plain-text auth mechanisms.
+
+disable_plaintext_auth = no
+auth_mechanisms = plain login
 
 !include auth-sql.conf.ext
