--- a/mail/mta/etc/supervisord.conf
+++ b/mail/mta/etc/supervisord.conf
@@ -17,5 +17,5 @@ command = /usr/sbin/dovecot
 startsecs = 0
 
 [program:spamd]
-command = /usr/sbin/spamd
+command = /usr/sbin/spamd --ipv4 --listen 127.0.0.1:783 --allow-tell --allowed-ips=127.0.0.1
 startsecs = 0
