compile icecast 2.5-beta1 from source

--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -1,11 +1,25 @@
-FROM voxxit/alpine-rpi:latest
+FROM voxxit/base:alpine
 
-MAINTAINER Joshua Delsman <j (at) srv.im>
+ENV BUILD_DEPS build-base automake autoconf libtool git
+ENV RUN_DEPS   libxslt-dev libxml2-dev libogg-dev libtheora-dev libvorbis-dev speex-dev
 
 RUN  apk update \
-  && apk add lame icecast \
-  && rm -rf /var/cache/apk/*
+  && apk upgrade \
+  && apk add $BUILD_DEPS $RUN_DEPS \
+  && cd /usr/local/src \
+    && wget -O- http://downloads.xiph.org/releases/icecast/icecast-2.5-beta1.tar.gz | tar -xz \
+    && cd icecast* \
+    && ./configure \
+    && make \
+    && adduser -h /var/log/icecast -s /sbin/nologin -D icecast \
+    && install -d -D -o icecast -g icecast /var/log/icecast \
+    && touch /etc/mime.types \
+    && make install \
+  && apk del $BUILD_DEPS \
+  && rm -rf /var/cache/apk/* /usr/local/src/*
 
-EXPOSE 8000
+COPY icecast.xml /etc/icecast.xml
+
+EXPOSE 80
 
 CMD [ "icecast", "-c", "/etc/icecast.xml" ]
