--- a/liquidsoap/Dockerfile
+++ b/liquidsoap/Dockerfile
@@ -2,25 +2,9 @@ FROM voxxit/base:ubuntu
 
 MAINTAINER Joshua Delsman <j (at) srv.im>
 
-RUN apt-get -y update &&\
-  apt-get -y install \
-    liquidsoap \
-    liquidsoap-plugin-icecast \
-    liquidsoap-plugin-lame \
-    liquidsoap-plugin-vorbis \
-    liquidsoap-plugin-mad \
-    liquidsoap-plugin-taglib \
-    liquidsoap-plugin-ogg \
-    liquidsoap-plugin-flac \
-    liquidsoap-plugin-faad \
-    liquidsoap-plugin-voaacenc &&\
-  rm -rf /var/lib/apt/lists*
+RUN  apt-get -y update \
+  && apt-get -y upgrade \
+  && apt-get -y install liquidsoap liquidsoap-plugin-all \
+  && rm -rf /var/lib/apt/lists*
 
-COPY ./radio.liq /
-COPY ./run.sh /
-
-EXPOSE 10000
-
-VOLUME [ "/media" ]
-
-ENTRYPOINT [ "/run.sh" ]
+ENTRYPOINT [ "liquidsoap" ]
