adding mp3gain to liquidsoap; adding goaccess

--- a/liquidsoap/Dockerfile
+++ b/liquidsoap/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER j@srv.im
 
 RUN  apt-get -y update \
   && apt-get -y upgrade \
-  && apt-get -y install liquidsoap liquidsoap-plugin-all \
+  && apt-get -y install mp3gain liquidsoap liquidsoap-plugin-all \
   && rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT [ "liquidsoap" ]
