use alpine for nginx-rtmp

--- a/nginx-rtmp/Dockerfile
+++ b/nginx-rtmp/Dockerfile
@@ -1,8 +1,7 @@
-FROM ubuntu:latest
+FROM voxxit/base:alpine
 
-RUN  apt-get -y update \
-  && apt-get -y upgrade \
-  && apt-get -y install wget build-essential git-core libssl-dev libpcre3-dev \
+RUN  apk update \
+  && apk add build-base git pcre-dev openssl-dev \
   && cd /usr/local/src \
   && git clone git://github.com/arut/nginx-rtmp-module.git \
   && wget -qO- http://nginx.org/download/nginx-1.8.0.tar.gz | tar -xz \
@@ -10,9 +9,9 @@ RUN  apt-get -y update \
   && ./configure --prefix=/usr/local/nginx --add-module=/usr/local/src/nginx-rtmp-module \
   && make \
   && make install \
-  && apt-get -y remove --purge wget build-essential git-core \
-  && apt-get -y autoremove \
-  && rm -rf /var/lib/apt/lists/* /var/tmp/* /tmp/* /usr/local/src/*
+  && cp /usr/local/src/nginx-rtmp-module/stat.xsl /usr/local/nginx/html/ \
+  && apk del build-base git \
+  && rm -rf /var/cache/apk/* /var/tmp/* /tmp/* /usr/local/src/*
 
 # forward request and error logs to docker log collector
 RUN  ln -sf /dev/stdout /usr/local/nginx/logs/access.log \
