--- a/nginx-rtmp/conf/nginx.conf
+++ b/nginx-rtmp/conf/nginx.conf
@@ -26,6 +26,11 @@ http {
 
     location /stats {
       rtmp_stat all;
+      rtmp_stat_stylesheet stat.xsl;
+    }
+
+    location /stat.xsl {
+      root /usr/local/nginx/html;
     }
 
     location /hls {
