--- a/vault/Dockerfile
+++ b/vault/Dockerfile
@@ -5,5 +5,7 @@ RUN  wget http://dl.bintray.com/mitchellh/vault/vault_0.1.2_linux_amd64.zip \
   && mv vault /usr/local/bin/ \
   && rm -f vault_0.1.2_linux_amd64.zip
 
+EXPOSE 8200
+
 ENTRYPOINT [ "vault" ]
 CMD [ "server", "-dev" ]
