--- a/bind/Dockerfile
+++ b/bind/Dockerfile
@@ -1,13 +1,9 @@
 FROM voxxit/base:alpine
 
-RUN  apk update \
-  && apk add bind \
-  && rm -rf /var/cache/apk/* /etc/bind
+RUN apk add --update bind && rm -rf /var/cache/apk/*
 
-VOLUME [ "/etc/bind" ]
+ADD . /etc/bind/
 
-ADD etc/ /etc/bind/
+EXPOSE 53/udp
 
-EXPOSE 53
-
-CMD [ "/usr/sbin/named", "-c", "/etc/bind/named.conf", "-f" ]
+CMD [ "named", "-g" ]
