Update alpine base image with gosu 1.7

--- a/base/alpine/Dockerfile
+++ b/base/alpine/Dockerfile
@@ -3,11 +3,11 @@ FROM alpine:edge
 MAINTAINER Joshua Delsman <j@srv.im>
 
 RUN  apk add --update git curl bash \
-  && curl -o /usr/local/bin/gosu -L https://github.com/tianon/gosu/releases/download/1.2/gosu-amd64 \
-  && chmod +x /usr/local/bin/gosu \
+  && curl -o /usr/bin/gosu -L https://github.com/tianon/gosu/releases/download/1.7/gosu-amd64 \
+  && chmod +x /usr/bin/gosu \
   && git clone https://github.com/sstephenson/bats.git /usr/local/src/bats \
-  && /usr/local/src/bats/install.sh /usr/local \
+  && /usr/local/src/bats/install.sh /usr \
   && apk del git curl \
-  && rm -rf /var/cache/apk/* /usr/local/src/*
+  && rm -r /var/cache/apk/* /usr/local/src/bats
 
 CMD []
