Use voxxit/base:alpine

--- a/icecast/Dockerfile
+++ b/icecast/Dockerfile
@@ -1,12 +1,11 @@
-FROM alpine:latest
+FROM voxxit/base:alpine
 
-RUN  echo "http://repos.lax-noc.com/alpine/v3.3/main" > /etc/apk/repositories \
-  && apk add --update \
-        icecast \
-        pwgen \
-        build-base \
-        libxml2-dev \
-        libshout-dev \
+RUN apk add --update \
+      icecast \
+      pwgen \
+      build-base \
+      libxml2-dev \
+      libshout-dev \
   && mkdir -p /usr/src \
   && cd /usr/src \
   && wget http://downloads.us.xiph.org/releases/ices/ices-2.0.2.tar.gz \
